; ModuleID = '/home/carl/AnghaBench/reactos/dll/appcompat/shims/layer/extr_vmhorizon.c_Write.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/appcompat/shims/layer/extr_vmhorizon.c_Write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_EXECUTE_READWRITE = common dso_local global i32 0, align 4
@STATUS_MEMORY_NOT_ALLOCATED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32, i64)* @Write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Write(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %7, align 4
  %13 = load i64, i64* %6, align 8
  store i64 %13, i64* %8, align 8
  %14 = call i32 (...) @NtCurrentProcess()
  %15 = load i32, i32* @PAGE_EXECUTE_READWRITE, align 4
  %16 = call i32 @NtProtectVirtualMemory(i32 %14, i32* %7, i64* %8, i32 %15, i32* %9)
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %10, align 4
  %18 = call i64 @NT_SUCCESS(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %39

20:                                               ; preds = %3
  %21 = call i32 (...) @NtCurrentProcess()
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i64, i64* %6, align 8
  %25 = call i32 @NtWriteVirtualMemory(i32 %21, i32 %22, i32 %23, i64 %24, i64* %11)
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = call i64 @NT_SUCCESS(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %20
  %30 = load i64, i64* %11, align 8
  %31 = load i64, i64* %6, align 8
  %32 = icmp ne i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %29
  %34 = load i32, i32* @STATUS_MEMORY_NOT_ALLOCATED, align 4
  store i32 %34, i32* %10, align 4
  br label %35

35:                                               ; preds = %33, %29, %20
  %36 = call i32 (...) @NtCurrentProcess()
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @NtProtectVirtualMemory(i32 %36, i32* %7, i64* %8, i32 %37, i32* %9)
  br label %39

39:                                               ; preds = %35, %3
  %40 = load i32, i32* %10, align 4
  %41 = call i64 @NT_SUCCESS(i32 %40)
  ret i64 %41
}

declare dso_local i32 @NtProtectVirtualMemory(i32, i32*, i64*, i32, i32*) #1

declare dso_local i32 @NtCurrentProcess(...) #1

declare dso_local i64 @NT_SUCCESS(i32) #1

declare dso_local i32 @NtWriteVirtualMemory(i32, i32, i32, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
